@@ -15,6 +15,7 @@ Version : 4.12.3 #XG1
 - Add LandtilesView into TileArtForm
 - Add Editor for Tilesbrush.xml (CentrEd)
 - Add Transitions - Graphic (From Prapilk)
+- Add TileViewContextMenuStrip_Closing To focus on the index.
 
 Version : 4.12.2 #XG1
 - BildFusion Add Sharp , Clipboard, Texture Cut.
